# emu_like

./: .gitignore  README.md  emu_like.py  explanatory.yaml  explanatory_sample.yaml  explanatory_test_mcmc.yaml  explanatory_train.yaml  main.py  planck_emu.py  planck_mcmc.yaml  planck_sample.yaml  planck_test_mcmc.yaml  planck_train.yaml  pyproject.toml  simple_sample.yaml  simple_train.yaml  spectra_sample.yaml  spectra_train.yaml
examples/: linear_1D.ipynb  quadratic_1D.ipynb  quadratic_2D.ipynb
pipelines/: export.py  mcmc.py  sample.py  test.py  test_mcmc.py  train.py
planck_like/: LikelihoodPlanckLcdm.yaml  likelihood_lcdm.py
scripts/: check_class.py  check_infinities.py  check_nans.py  get_ini_files.py  get_ini_files_sample.py  get_ini_files_train.py  lcdm_2D_train.py  lcdm_2D_train.sh  lcdm_train.py  lcdm_train.sh  repair_fits.py  replace_infinities.py  replace_nans.py  train_one_spectrum.ipynb  train_spectra.py
src/: emu.py  ffnn_emu.py  io.py  mcmc.py  plots.py  sample.py  samplers.py  scalers.py
src/cobaya/: __init__.py
src/core/: emu.py  ffnn_emu.py  mcmc.py  sample.py  samplers.py  scalers.py
src/emu_like/: __init__.py  datasets.py  defaults.py  emu.py  ffnn_emu.py  io.py  loss_functions.py  mcmc.py  params.py  pca.py  plots.py  sample.py  samplers.py  sampling_functions.py  scalers.py  spectra.py  train_generators.py  x_samplers.py  y_models.py
src/emu_like/cobaya/: likelihood_lcdm.py
src/utilities/: defaults.py  io.py  plots.py
tests/: test_scalers.py
tools/: defaults.py  emu.py  ffnn_emu.py  generate_functions.py  io.py  loss_functions.py  mcmc.py  plots.py  printing_scripts.py  sample.py  sample_emu.py  samplers.py  sampling_functions.py  scalers.py  train_emu.py
