[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "emu_like"
version = "0.0.0"
authors = [{name="Emilio Bellini"}]
description = "TODO"
requires-python = ">=3.8.0"
dependencies = [
    "cobaya>=3.0",
    "numpy>=1.26",
    "pyyaml>=6.0.1",
]

[project.urls]
# Homepage = "...."
# Documentation = "..."
# Source = "https://github.com/emiliobellini/emu_like"
# Tracker = "https://github.com/emiliobellini/emu_like/issues"
# Licensing = "TODO"