[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "emu_like"
version = "0.1.0"
authors = [{name="Emilio Bellini"}]
description = "TODO"
requires-python = ">=3.8.0"
dependencies = [
    "astropy",
    "cobaya>=3.0",
    "emcee>=3.1",
    "numpy>=1.26",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3",
    "scipy>=1.15",
    "tensorflow>=2.15",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/emiliobellini/emu_like"
Documentation = "https://github.com/emiliobellini/emu_like/README.md"
Source = "https://github.com/emiliobellini/emu_like"
Tracker = "https://github.com/emiliobellini/emu_like/issues"
Licensing = "https://github.com/emiliobellini/emu_like/LICENSE"